--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,5 +26,7 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.github.GrenderG:Toasty:1.2.5'
+    compile 'com.github.medyo:fancybuttons:1.8.4'
     testCompile 'junit:junit:4.12'
 }
